--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@gsap/react": "^2.1.0",
     "@mui/material": "^5.14.10",
     "@mui/x-date-pickers": "^6.16.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +15,7 @@
     "@types/node": "^16.18.54",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "@types/react-smooth-scrollbar": "^8.0.6",
     "aos": "^2.3.4",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
@@ -27,6 +29,7 @@
     "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "scrolltrigger": "^1.0.1",
     "slick-carousel": "^1.8.1",
     "smooth-scrollbar": "^8.8.4",
     "styled-components": "^6.1.1",
